# doomNukem

./: .gitignore  CMakeLists.txt  Makefile  README.md
editor/: Makefile
editor/includes/: editor.h
editor/libft/: Makefile  ft_strsplitwhitespaces.c  ft_strwcmp.c  libft.h
editor/sources/editor/: bigloop.c  checksum.c  events.c  init.c  save_map.c  write_to_file.c
engine/includes/: engine.h
engine/srcs/: parser_checksum.c  parser_package.c  parser_reader.c
game/includes/: game.h
game/srcs/: game_movement_funs.c  parser_filename.c
includes/: mapeditor.h
lib/libft/: Makefile
lib/libft/includes/: libft.h
lib/libft/srcs/: ft_atoi.c  ft_atoi_hex.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstreduce.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcapitalize.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+28 more)
srcs/: mapeditor.c  me_errors_handler.c  me_init.c  me_keyboard_handler.c
