cmake_minimum_required(VERSION 3.13)
project(MapEditor C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)

include_directories(includes)
include_directories(lib/libft/includes)
include_directories(lib)
include_directories(${SDL2_INCLUDE_DIR})

find_package(SDL2 REQUIRED)

add_executable(MapEditor
		includes/mapeditor.h
		lib/libft/includes/libft.h
		lib/libft/srcs/ft_atoi.c
		lib/libft/srcs/ft_atoi_hex.c
		lib/libft/srcs/ft_bzero.c
		lib/libft/srcs/ft_isalnum.c
		lib/libft/srcs/ft_isalpha.c
		lib/libft/srcs/ft_isascii.c
		lib/libft/srcs/ft_isblank.c
		lib/libft/srcs/ft_isdigit.c
		lib/libft/srcs/ft_islower.c
		lib/libft/srcs/ft_isprint.c
		lib/libft/srcs/ft_isspace.c
		lib/libft/srcs/ft_itoa.c
		lib/libft/srcs/ft_itoa_base.c
		lib/libft/srcs/ft_lstadd.c
		lib/libft/srcs/ft_lstdel.c
		lib/libft/srcs/ft_lstdelone.c
		lib/libft/srcs/ft_lstiter.c
		lib/libft/srcs/ft_lstmap.c
		lib/libft/srcs/ft_lstnew.c
		lib/libft/srcs/ft_lstreduce.c
		lib/libft/srcs/ft_memalloc.c
		lib/libft/srcs/ft_memccpy.c
		lib/libft/srcs/ft_memchr.c
		lib/libft/srcs/ft_memcmp.c
		lib/libft/srcs/ft_memcpy.c
		lib/libft/srcs/ft_memdel.c
		lib/libft/srcs/ft_memmove.c
		lib/libft/srcs/ft_memset.c
		lib/libft/srcs/ft_putchar.c
		lib/libft/srcs/ft_putchar_fd.c
		lib/libft/srcs/ft_putendl.c
		lib/libft/srcs/ft_putendl_fd.c
		lib/libft/srcs/ft_putnbr.c
		lib/libft/srcs/ft_putnbr_fd.c
		lib/libft/srcs/ft_putstr.c
		lib/libft/srcs/ft_putstr_fd.c
		lib/libft/srcs/ft_strcapitalize.c
		lib/libft/srcs/ft_strcat.c
		lib/libft/srcs/ft_strchr.c
		lib/libft/srcs/ft_strclr.c
		lib/libft/srcs/ft_strcmp.c
		lib/libft/srcs/ft_strcpy.c
		lib/libft/srcs/ft_strdel.c
		lib/libft/srcs/ft_strdup.c
		lib/libft/srcs/ft_strequ.c
		lib/libft/srcs/ft_striter.c
		lib/libft/srcs/ft_striteri.c
		lib/libft/srcs/ft_strjoin.c
		lib/libft/srcs/ft_strlcat.c
		lib/libft/srcs/ft_strlen.c
		lib/libft/srcs/ft_strmap.c
		lib/libft/srcs/ft_strmapi.c
		lib/libft/srcs/ft_strncat.c
		lib/libft/srcs/ft_strncmp.c
		lib/libft/srcs/ft_strncpy.c
		lib/libft/srcs/ft_strnequ.c
		lib/libft/srcs/ft_strnew.c
		lib/libft/srcs/ft_strnstr.c
		lib/libft/srcs/ft_strrchr.c
		lib/libft/srcs/ft_strsplit.c
		lib/libft/srcs/ft_strsplitwhitespaces.c
		lib/libft/srcs/ft_strstr.c
		lib/libft/srcs/ft_strsub.c
		lib/libft/srcs/ft_strtrim.c
		lib/libft/srcs/ft_strwcmp.c
		lib/libft/srcs/ft_tolower.c
		lib/libft/srcs/ft_toupper.c
		lib/libft/srcs/get_next_line.c
		lib/SDL2/begin_code.h
		lib/SDL2/close_code.h
		lib/SDL2/SDL.h
		lib/SDL2/SDL_assert.h
		lib/SDL2/SDL_atomic.h
		lib/SDL2/SDL_audio.h
		lib/SDL2/SDL_bits.h
		lib/SDL2/SDL_blendmode.h
		lib/SDL2/SDL_clipboard.h
		lib/SDL2/SDL_config.h
		lib/SDL2/SDL_cpuinfo.h
		lib/SDL2/SDL_egl.h
		lib/SDL2/SDL_endian.h
		lib/SDL2/SDL_error.h
		lib/SDL2/SDL_events.h
		lib/SDL2/SDL_filesystem.h
		lib/SDL2/SDL_gamecontroller.h
		lib/SDL2/SDL_gesture.h
		lib/SDL2/SDL_haptic.h
		lib/SDL2/SDL_hints.h
		lib/SDL2/SDL_joystick.h
		lib/SDL2/SDL_keyboard.h
		lib/SDL2/SDL_keycode.h
		lib/SDL2/SDL_loadso.h
		lib/SDL2/SDL_log.h
		lib/SDL2/SDL_main.h
		lib/SDL2/SDL_messagebox.h
		lib/SDL2/SDL_mouse.h
		lib/SDL2/SDL_mutex.h
		lib/SDL2/SDL_name.h
		lib/SDL2/SDL_opengl.h
		lib/SDL2/SDL_opengl_glext.h
		lib/SDL2/SDL_opengles.h
		lib/SDL2/SDL_opengles2.h
		lib/SDL2/SDL_opengles2_gl2.h
		lib/SDL2/SDL_opengles2_gl2ext.h
		lib/SDL2/SDL_opengles2_gl2platform.h
		lib/SDL2/SDL_opengles2_khrplatform.h
		lib/SDL2/SDL_pixels.h
		lib/SDL2/SDL_platform.h
		lib/SDL2/SDL_power.h
		lib/SDL2/SDL_quit.h
		lib/SDL2/SDL_rect.h
		lib/SDL2/SDL_render.h
		lib/SDL2/SDL_revision.h
		lib/SDL2/SDL_rwops.h
		lib/SDL2/SDL_scancode.h
		lib/SDL2/SDL_sensor.h
		lib/SDL2/SDL_shape.h
		lib/SDL2/SDL_stdinc.h
		lib/SDL2/SDL_surface.h
		lib/SDL2/SDL_system.h
		lib/SDL2/SDL_syswm.h
		lib/SDL2/SDL_test.h
		lib/SDL2/SDL_test_assert.h
		lib/SDL2/SDL_test_common.h
		lib/SDL2/SDL_test_compare.h
		lib/SDL2/SDL_test_crc32.h
		lib/SDL2/SDL_test_font.h
		lib/SDL2/SDL_test_fuzzer.h
		lib/SDL2/SDL_test_harness.h
		lib/SDL2/SDL_test_images.h
		lib/SDL2/SDL_test_log.h
		lib/SDL2/SDL_test_md5.h
		lib/SDL2/SDL_test_memory.h
		lib/SDL2/SDL_test_random.h
		lib/SDL2/SDL_thread.h
		lib/SDL2/SDL_timer.h
		lib/SDL2/SDL_touch.h
		lib/SDL2/SDL_ttf.h
		lib/SDL2/SDL_types.h
		lib/SDL2/SDL_version.h
		lib/SDL2/SDL_video.h
		lib/SDL2/SDL_vulkan.h
		srcs/mapeditor.c
		srcs/me_errors_handler.c
		srcs/me_keyboard_handler.c srcs/me_init.c)

target_link_libraries(MapEditor ${SDL2_LIBRARY})
